@@ -6,20 +6,26 @@ import org.example.backendyosrmegaapp.Repositories.ConversationParticipantReposi
 import org.example.backendyosrmegaapp.Repositories.MessageRepository;
 import org.example.backendyosrmegaapp.Repositories.UserRepository;
 
-
 import org.example.backendyosrmegaapp.Services.MessageService;
 import org.example.backendyosrmegaapp.entities.*;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.List;
+import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
-public class MessageServiceImpl
-        implements MessageService {
+public class MessageServiceImpl implements MessageService {
 
     private final MessageRepository messageRepository;
 
@@ -28,21 +34,47 @@ public class MessageServiceImpl
 
     private final UserRepository userRepository;
 
+    /*
+     * Dossier de stockage des photos des messages.
+     *
+     * Exemple dans application.properties :
+     *
+     * app.upload.message-images=C:/shared_uploads/messages
+     */
+    @Value("${app.upload.message-images}")
+    private String messageImagesDirectory;
+
+
+    // =========================================================
+    // ENVOI MESSAGE HTTP
+    // TEXTE + PHOTO
+    // =========================================================
+
     @Override
     public ChatMessageResponse sendMessage(
             Long conversationId,
             Long senderId,
             String contenu,
-            String image
-    ) {
+            MultipartFile image
+    ) throws IOException {
 
-        if ((contenu == null || contenu.trim().isEmpty())
-                && (image == null || image.isBlank())) {
+        boolean hasText =
+                contenu != null
+                        && !contenu.trim().isEmpty();
+
+        boolean hasImage =
+                image != null
+                        && !image.isEmpty();
+
+        if (!hasText && !hasImage) {
 
             throw new RuntimeException(
                     "Le message ne peut pas être vide"
             );
         }
+
+
+        // Vérifier le participant
 
         ConversationParticipant participant =
                 participantRepository
@@ -56,6 +88,9 @@ public class MessageServiceImpl
                                 )
                         );
 
+
+        // Récupérer l'utilisateur
+
         User sender =
                 userRepository.findById(senderId)
                         .orElseThrow(() ->
@@ -64,10 +99,102 @@ public class MessageServiceImpl
                                 )
                         );
 
+
+        // URL de l'image
+
+        String imageUrl = null;
+
+
+        // Sauvegarder la photo
+
+        if (hasImage) {
+
+            imageUrl =
+                    saveMessageImage(image);
+        }
+
+
+        // Créer le message
+
         Message message =
                 Message.builder()
                         .contenu(
-                                contenu != null
+                                hasText
+                                        ? contenu.trim()
+                                        : null
+                        )
+                        .image(imageUrl)
+                        .conversation(
+                                participant.getConversation()
+                        )
+                        .sender(sender)
+                        .isRead(false)
+                        .build();
+
+
+        Message saved =
+                messageRepository.save(message);
+
+
+        return toResponse(saved);
+    }
+
+
+    // =========================================================
+    // WEBSOCKET
+    // MESSAGE TEXTE
+    // =========================================================
+
+    @Override
+    public ChatMessageResponse sendTextMessage(
+            Long conversationId,
+            Long senderId,
+            String contenu,
+            String image
+    ) {
+
+        boolean hasText =
+                contenu != null
+                        && !contenu.trim().isEmpty();
+
+        boolean hasImage =
+                image != null
+                        && !image.isBlank();
+
+        if (!hasText && !hasImage) {
+
+            throw new RuntimeException(
+                    "Le message ne peut pas être vide"
+            );
+        }
+
+
+        ConversationParticipant participant =
+                participantRepository
+                        .findByConversationIdAndUserId(
+                                conversationId,
+                                senderId
+                        )
+                        .orElseThrow(() ->
+                                new RuntimeException(
+                                        "L'utilisateur ne participe pas à cette conversation"
+                                )
+                        );
+
+
+        User sender =
+                userRepository.findById(senderId)
+                        .orElseThrow(() ->
+                                new RuntimeException(
+                                        "Utilisateur introuvable"
+                                )
+                        );
+
+
+        Message message =
+                Message.builder()
+                        .contenu(
+                                hasText
                                         ? contenu.trim()
                                         : null
                         )
@@ -79,11 +206,122 @@ public class MessageServiceImpl
                         .isRead(false)
                         .build();
 
+
         Message saved =
                 messageRepository.save(message);
 
+
         return toResponse(saved);
     }
+
+
+    // =========================================================
+    // SAUVEGARDE PHOTO
+    // =========================================================
+
+    private String saveMessageImage(
+            MultipartFile image
+    ) throws IOException {
+
+
+        // Vérifier le type
+
+        String contentType =
+                image.getContentType();
+
+        if (
+                contentType == null
+                        || !contentType.startsWith("image/")
+        ) {
+
+            throw new RuntimeException(
+                    "Le fichier doit être une image"
+            );
+        }
+
+
+        // Taille maximale : 10 MB
+
+        if (
+                image.getSize()
+                        > 10 * 1024 * 1024
+        ) {
+
+            throw new RuntimeException(
+                    "L'image ne doit pas dépasser 10 MB"
+            );
+        }
+
+
+        // Créer le dossier
+
+        Path directory =
+                Paths.get(
+                        messageImagesDirectory
+                );
+
+        Files.createDirectories(
+                directory
+        );
+
+
+        // Récupérer extension
+
+        String originalName =
+                image.getOriginalFilename();
+
+        String extension = "";
+
+
+        if (
+                originalName != null
+                        && originalName.contains(".")
+        ) {
+
+            extension =
+                    originalName.substring(
+                            originalName.lastIndexOf(".")
+                    );
+        }
+
+
+        // Nom unique
+
+        String filename =
+                UUID.randomUUID()
+                        + extension;
+
+
+        // Chemin final
+
+        Path target =
+                directory.resolve(filename);
+
+
+        // Copier le fichier
+
+        Files.copy(
+                image.getInputStream(),
+                target,
+                StandardCopyOption.REPLACE_EXISTING
+        );
+
+
+        /*
+         * URL enregistrée dans la DB.
+         *
+         * Exemple :
+         *
+         * /api/messages/images/abc.jpg
+         */
+
+        return "/api/messages/images/" + filename;
+    }
+
+
+    // =========================================================
+    // RÉCUPÉRER MESSAGES
+    // =========================================================
 
     @Transactional(readOnly = true)
     @Override
@@ -99,11 +337,14 @@ public class MessageServiceImpl
                                 userId
                         );
 
+
         if (!participant) {
+
             throw new RuntimeException(
                     "Accès interdit à cette conversation"
             );
         }
+
 
         return messageRepository
                 .findByConversationIdOrderBySentAtAsc(
@@ -114,6 +355,11 @@ public class MessageServiceImpl
                 .toList();
     }
 
+
+    // =========================================================
+    // MARQUER UN MESSAGE COMME LU
+    // =========================================================
+
     @Override
     public void markMessageAsRead(
             Long messageId,
@@ -121,35 +367,50 @@ public class MessageServiceImpl
     ) {
 
         Message message =
-                messageRepository.findById(messageId)
+                messageRepository
+                        .findById(messageId)
                         .orElseThrow(() ->
                                 new RuntimeException(
                                         "Message introuvable"
                                 )
                         );
 
+
         boolean participant =
                 participantRepository
                         .existsByConversationIdAndUserId(
-                                message.getConversation().getId(),
+                                message
+                                        .getConversation()
+                                        .getId(),
                                 userId
                         );
 
+
         if (!participant) {
+
             throw new RuntimeException(
                     "Accès interdit"
             );
         }
 
-        /*
-         * Le sender n'a pas besoin de marquer
-         * son propre message comme lu.
-         */
-        if (!message.getSender().getId().equals(userId)) {
+
+        if (
+                !message
+                        .getSender()
+                        .getId()
+                        .equals(userId)
+        ) {
+
             message.setIsRead(true);
+
             messageRepository.save(message);
         }
     }
+
+
+    // =========================================================
+    // MARQUER UNE CONVERSATION COMME LUE
+    // =========================================================
 
     @Override
     public void markConversationAsRead(
@@ -164,29 +425,49 @@ public class MessageServiceImpl
                                 userId
                         );
 
-        messages.forEach(message ->
-                message.setIsRead(true)
+
+        messages.forEach(
+                message ->
+                        message.setIsRead(true)
         );
 
-        messageRepository.saveAll(messages);
+
+        messageRepository.saveAll(
+                messages
+        );
     }
+
+
+    // =========================================================
+    // COMPTER NON LUS
+    // =========================================================
 
     @Transactional(readOnly = true)
     @Override
-    public long countUnreadMessages(Long userId) {
+    public long countUnreadMessages(
+            Long userId
+    ) {
 
         return participantRepository
                 .findByUserId(userId)
                 .stream()
-                .mapToLong(participant ->
-                        messageRepository
-                                .countByConversationIdAndIsReadFalseAndSenderIdNot(
-                                        participant.getConversation().getId(),
-                                        userId
-                                )
+                .mapToLong(
+                        participant ->
+                                messageRepository
+                                        .countByConversationIdAndIsReadFalseAndSenderIdNot(
+                                                participant
+                                                        .getConversation()
+                                                        .getId(),
+                                                userId
+                                        )
                 )
                 .sum();
     }
+
+
+    // =========================================================
+    // SUPPRIMER MESSAGE
+    // =========================================================
 
     @Override
     public void deleteMessage(
@@ -195,41 +476,90 @@ public class MessageServiceImpl
     ) {
 
         Message message =
-                messageRepository.findById(messageId)
+                messageRepository
+                        .findById(messageId)
                         .orElseThrow(() ->
                                 new RuntimeException(
                                         "Message introuvable"
                                 )
                         );
 
-        if (!message.getSender().getId().equals(userId)) {
+
+        if (
+                !message
+                        .getSender()
+                        .getId()
+                        .equals(userId)
+        ) {
+
             throw new RuntimeException(
                     "Vous ne pouvez supprimer que vos messages"
             );
         }
 
-        messageRepository.delete(message);
+
+        messageRepository.delete(
+                message
+        );
     }
 
-    private ChatMessageResponse toResponse(Message message) {
 
-        User sender = message.getSender();
+    // =========================================================
+    // CONVERSION ENTITY → RESPONSE
+    // =========================================================
+
+    private ChatMessageResponse toResponse(
+            Message message
+    ) {
+
+        User sender =
+                message.getSender();
+
 
         return ChatMessageResponse.builder()
-                .id(message.getId())
-                .conversationId(
-                        message.getConversation().getId()
+
+                .id(
+                        message.getId()
                 )
-                .senderId(sender.getId())
-                .senderFirstName(sender.getFirstName())
-                .senderLastName(sender.getLastName())
+
+                .conversationId(
+                        message
+                                .getConversation()
+                                .getId()
+                )
+
+                .senderId(
+                        sender.getId()
+                )
+
+                .senderFirstName(
+                        sender.getFirstName()
+                )
+
+                .senderLastName(
+                        sender.getLastName()
+                )
+
                 .senderProfileImage(
                         sender.getProfileImage()
                 )
-                .contenu(message.getContenu())
-                .image(message.getImage())
-                .sentAt(message.getSentAt())
-                .isRead(message.getIsRead())
+
+                .contenu(
+                        message.getContenu()
+                )
+
+                .image(
+                        message.getImage()
+                )
+
+                .sentAt(
+                        message.getSentAt()
+                )
+
+                .isRead(
+                        message.getIsRead()
+                )
+
                 .build();
     }
 }
